# numba-raytracer

./: README.md  lefthook.yml  pyproject.toml
numba_raytracer/: __init__.py
numba_raytracer/basic/: __main__.py
numba_raytracer/py_v1/: __main__.py  ray.py  vec.py
numba_raytracer/pythonic/: __init__.py  __main__.py  vec.py
numba_raytracer/v0/: ray.py
