[tool.poetry]
name = "numba-raytracer"
version = "0.1.0"
description = "An exploration of Python performance with Numba"
authors = ["Tiago Antao <tiago@tiago.org>"]
readme = "README.md"
packages = [{include = "numba_raytracer"}]

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.57.1"
pillow = "^10.0.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.282"
types-pillow = "^10.0.0.2"

[build-system]
requires = ["poetry-core >= 1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.ruff]
select = [
  "E", "W", # pycodestyle
  "F",      # pyflakes
  "UP",     # pyupgrade
  "D",      # pydocstyle
  "I",      # isort
  "N",      # PEP8
  "S",      # flake8-bandit
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "ISC",    # flake8-implicit-str-concat
  "PT",     # flake8-pytest-style
  "RET",    # flake8-return
  "SIM",    # flake8-simplify
  "PTH",    # flake8-use-pathlib
  "PD",     # pandas-vet
  "PLE",    # pylint-error
  "NPY",    # numpy
  "RUF",    # ruff
]


[tool.ruff.pydocstyle]
convention = "numpy"
